# cached_ctest

./: .gitignore  README.md  cached_ctest
cmake/: CachedCTest.cmake  MergeTestMetadata.cmake
example/: CMakeLists.txt
example/src/: math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
example/tests/: test_integration.cpp  test_math_add.cpp  test_math_multiply.cpp  test_string_concat.cpp  test_string_reverse.cpp
tests/: test_cached_ctest.sh
